LRIS-33170 fix expand/collapse

--- a/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/admin/css/main.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/admin/css/main.scss
@@ -102,12 +102,6 @@ $text-color: #474A4B;
 		padding-left: 25px;
 	}
 
-	.collapse, .expand {
-		.taglib-text {
-			text-decoration: none;
-		}
-	}
-
 	.form-search .input-group.advanced-search .search-query {
 		padding-left: 45px;
 	}
